apply plugin: 'java-library'
apply plugin: 'kotlin'

dependencies {
    testRuntimeOnly project(":quack-jni")
    testImplementation "junit:junit:${versions.junit}"
    implementation  "org.jetbrains.kotlin:kotlin-stdlib:${versions.kotlin}"
}

java {
    sourceCompatibility JavaVersion.VERSION_1_8
    targetCompatibility JavaVersion.VERSION_1_8
}

compileKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}
compileTestKotlin {
    kotlinOptions {
        jvmTarget = "1.8"
    }
}

task sourcesJar(type: Jar, dependsOn: classes) {
  classifier = 'sources'
  from sourceSets.main.java.srcDirs
}
 
// task testJar(type: Jar) {
//     classifier = 'tests'
//     from sourceSets.test.output
// }

apply from: 'maven.gradle'
